--- a/src/tables.skin.css
+++ b/src/tables.skin.css
@@ -1,12 +1,12 @@
 .tablesaw-overflow {
 	background:
 		/* Shadow covers */
-		linear-gradient(to right, white 30%, rgba(255,255,255,0)) 0 0,
-		linear-gradient(to right, rgba(255,255,255,0), white 70%) top right,
+		linear-gradient(90deg, white 30%, rgba(255,255,255,0)) 0 0,
+		linear-gradient(90deg, rgba(255,255,255,0), white 70%) top right,
 
 		/* Shadows */
 		radial-gradient(50% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) -6px 0,
-		radial-gradient(50% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) top right -6px;
+		radial-gradient(50% 50%, rgba(0,0,0,.2), rgba(0,0,0,0)) top 0 right -6px;
 	background-repeat: no-repeat;
 	background-color: white;
 	background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
